<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="title">Simple Calculator</string>
    <string name="title2">Addition Result</string>
    <string name="title3">Subtraction Result</string>
    <string name="title4">Multiplication Result</string>
    <string name="title5">Division Result</string>
    <string name="desc">Input a number from 1-4 that corresponds to the operator that you want to solve</string>
    <string name="desc2">Input your 1st and 2nd numbers</string>
    <string name="desc3">which is a (+) sign</string>
    <string name="desc4">which is a (-) sign</string>
    <string name="desc5">which is a (*) sign</string>
    <string name="desc6">which is a (/) sign</string>
    <string name="operator">1 = (+)</string>
    <string name="operator2">2 = (-)</string>
    <string name="operator3">3 = (*)</string>
    <string name="operator4">4 = (/)</string>
    <string name="o1">Input Operator</string>
    <string name="n1">Input 1st Number</string>
    <string name="n2">Input 2nd Number</string>
    <string name="result">Result</string>
    <string name="btnSolve">Solve</string>
    <string name="btnReturn">Return</string>
</resources>