<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04242C"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textColorHighlight="#B62626"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/operator"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/operator4"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/operator3"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/operator2"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/enterO"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:background="#3E707F"
        android:ems="10"
        android:hint="@string/o1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#7499A4"
        android:textColorHint="#7499A4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A34040"
        android:text="@string/btnSolve"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <EditText
        android:id="@+id/enterN2"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:background="#3E707F"
        android:ems="10"
        android:hint="@string/n2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#7499A4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:background="#3E707F"
        android:text="@string/desc2"
        android:textAlignment="center"
        android:textColor="#D3E2E7"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" />

    <EditText
        android:id="@+id/enterN1"
        android:layout_width="170dp"
        android:layout_height="53dp"
        android:background="#3E707F"
        android:ems="10"
        android:hint="@string/n1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="#7499A4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>